Fix image cutoff

--- a/src/SafeWarehouseApp/SafeWarehouseApp.Android/Assets/pdf/report.css
+++ b/src/SafeWarehouseApp/SafeWarehouseApp.Android/Assets/pdf/report.css
@@ -13,10 +13,8 @@
 }
 
 .schematic img {
-    /* width: unset;
-    height: unset;
-    max-width: unset;
-    max-height: unset; */
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .schematic .location {
